--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "edorse",
+  "name": "endorse",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-pdf": "^10.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
@@ -24,6 +24,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^5.3.1"
   }
 }
